--- a/app/views/rocket_job_mission_control/dirmon_entries/_status.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_status.html.haml
@@ -13,14 +13,19 @@
 %div
   %label Archive Directory:
   = @dirmon_entry.archive_directory
-.parameters
-  %label Arguments:
-  %pre
-    %code= pretty_print_array_or_hash(@dirmon_entry.arguments)
-.parameters
-  %label Properties:
-  %pre
-    %code= pretty_print_array_or_hash(@dirmon_entry.properties)
+-if @dirmon_entry.arguments.size > 0
+  .parameters
+    %label Arguments:
+    %pre
+      %code= pretty_print_array_or_hash(@dirmon_entry.arguments)
+- @dirmon_entry.properties.each_pair do |name, value|
+  .parameters
+    %label= "#{name.to_s.titleize}:"
+    - if value.is_a?(Array) || value.is_a?(Hash)
+      %pre
+        %code= pretty_print_array_or_hash(value)
+    - else
+      = value
 .id
   %label ID:
   = @dirmon_entry.id
