--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -4,7 +4,7 @@
     Menu
 
 
-  = link_to main_app.root_path, class: 'btn btn-default btn-blank last' do
+  = link_to '..', class: 'btn btn-default btn-blank last' do
     %i.fa.fa-reply
     Back Home
 
