--- a/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/jobs.scss
@@ -18,6 +18,7 @@
       width: 16em;
       height: 1em;
       margin: 5px 0px 0px 10px;
+      display: inline-block;
       -webkit-border-radius: 0 !important;
       -moz-border-radius: 0 !important;
       border-radius: 0 !important;
