--- a/app/views/layouts/rocket_job_mission_control/application.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/application.html.haml
@@ -21,12 +21,12 @@
     %link{href: "//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css", rel: "stylesheet"}/
 
   %body.rocket_job
-    #wrapper.toggled
-      = render partial: 'layouts/rocket_job_mission_control/partials/sidebar'
+    #wrapper
 
       #page-content-wrapper
         = render partial: 'layouts/rocket_job_mission_control/partials/header'
 
+      .container-fluid
         .flash.text-center
           - flash.each do |key, msg|
             - if msg
