Add sidebar and change up styling on jobs and dirmon entries.

--- a/app/assets/stylesheets/rocket_job_mission_control/application.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/application.scss
@@ -12,6 +12,7 @@
  *
  *= require selectize
  *= require selectize.default
+ *= require dataTables/jquery.dataTables
  *= require_self
  *= require_tree .
  */
