--- a/app/views/rocket_job_mission_control/dirmon_entries/new.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/new.html.haml
@@ -1,9 +1,5 @@
 .row
-  #queue
-
-    = render partial: 'list', locals: { jobs: @jobs }
-
-  .col-md-6
+  .col-xm-14
     .lead New Dirmon Entry
 
     = render partial: 'form'
