--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -1,5 +1,8 @@
+html, body, #wrapper, #wrapper > .container-fluid, #main, .row.row-offcanvas.row-offcanvas-left {
+  height: 100%
+}
+
 #wrapper {
-  height: 100%;
   overflow: hidden;
 }
 
@@ -107,12 +110,75 @@
   }
 }
 
+#wrapper {
+  background-color: #46484a;
+}
+
+#content {
+  margin-top: 60px;
+  padding: 20px;
+}
+
+#main {
+  padding-left: 0;
+}
+
+.white-background{
+  background-color: #fff;
+}
+
+/* Sidebar */
+
+#sidebar {
+  padding:0px;
+  padding-top:15px;
+}
+
+#sidebar, #sidebar a {
+  color: #fff;
+  text-shadow: 0 0 2px #000;
+  background-color: transparent;
+  padding-left: 5px;
+}
+
+#sidebar .nav li > a:hover {
+    color: #eee;
+}
+
+@media screen and (max-width: 768px) {
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
+  }
+
+  .row-offcanvas-left.active {
+    left: 33%;
+  }
+
+  .row-offcanvas-left.active .sidebar-offcanvas {
+    left: -33%;
+    position: absolute;
+    top: 0;
+    width: 33%;
+    margin-left: 5px;
+  }
+
+  #sidebar, #sidebar a, #sidebar-footer a {
+    padding-left:6px;
+  }
+}
+
 /* Header Styles */
 
 #header {
   padding: 5px;
-  // background-color: #46484a;
+  border-radius: 0;
   border-bottom: 1px solid #ddd;
+  position: fixed;
+  width: inherit;
+  z-index: 1000;
 
   .navbar {
     position: relative;
@@ -168,7 +234,6 @@
 
     &:hover {
       cursor: pointer;
-      background-color: #E7F4FF;
     }
 
     .inner {
