--- a/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/bootstrap_and_overrides.scss
@@ -187,7 +187,7 @@ $navbar-collapse-max-height:                340px;
 
 $navbar-default-color:                      #FFF;
 $navbar-default-bg:                         #46484A;
-$navbar-default-border:                     darken($navbar-default-bg, 6.5%);
+$navbar-default-border:                     #46484A;
 
 $navbar-default-link-color:                 #FFF;
 $navbar-default-link-hover-color:           #EEE;
