--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -1,33 +1,29 @@
-= render 'jobs_menu'
-.row
-  #queue
-  .col-md-16
-    .job-list
-      .list
-        - if @jobs.empty?
-          .title
-            .lead.text-center No Jobs Found.
-        - else
-          %h2= current_states
-          - @jobs.each do |job|
-            = link_to(job_path(id: job.id, states: @states), class: "card callout callout-#{job.state} #{job_selected_class(job, @job)}") do
-              .inner
-                .row
-                  .title.col-md-5
-                    .lead
-                      %i.fa{class: job_icon(job), style: 'font-size: 75%;', title: job.state}
-                      = job.class.name
+#queue
+  .job-list
+    .list
+      - if @jobs.empty?
+        .title
+          .lead.text-center No Jobs Found.
+      - else
+        %h2= current_states
+        - @jobs.each do |job|
+          = link_to(job_path(id: job.id, states: @states), class: "card callout callout-#{job.state} #{job_selected_class(job, @job)}") do
+            .inner
+              .row.text-center
+                .title.col-md-5
+                  .lead
+                    %i.fa{class: job_icon(job), style: 'font-size: 75%;', title: job.state}
+                    = job.class.name
 
-                  .description.col-md-3
-                    = job.description.try(:truncate, 50)
-                  .col-md-5.completion
-                    - if job.completed?
-                      Completed at:
-                      = job.completed_at
-                    - if job.running?
-                      .progress
-                        .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
+                .description.col-md-6
+                  = job.description.try(:truncate, 50)
+                .col-md-3.completion
+                  - if job.completed?
+                    = job.completed_at
+                  - if job.running?
+                    .progress
+                      .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
 
-                  .duration.col-md-3
-                    %i.fa.fa-clock-o
-                    = job.duration
+                .duration.col-md-2
+                  %i.fa.fa-clock-o
+                  = job.duration
