--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -5,25 +5,30 @@
         .title
           .lead.text-center No Jobs Found.
       - else
-        %h2= current_states
-        - @jobs.each do |job|
-          = link_to(job_path(id: job.id, states: @states), class: "card callout callout-#{job.state} #{job_selected_class(job, @job)}") do
-            .inner
-              .row.text-center
-                .title.col-md-5
-                  .lead
+        %h2
+          = current_state
+        %table.table.datatable.jobs-datatable{ data: { source: "#{jobs_url(format: 'json')}" } }
+          %thead
+            %tr
+              %th Class
+              %th Description
+              %th Completion
+              %th Duration
+          %tbody
+            - @jobs.each do |job|
+              %tr{ class: "card callout callout-#{job.state}" }
+                %td.title.col-md-4
+                  = link_to(job_path(job.id)) do
                     %i.fa{class: job_icon(job), style: 'font-size: 75%;', title: job.state}
                     = job.class.name
-
-                .description.col-md-6
+                %td.description.col-md-6
                   = job.description.try(:truncate, 50)
-                .col-md-3.completion
+                %td.completion.col-md-2
                   - if job.completed?
                     = job.completed_at
                   - if job.running?
                     .progress
                       .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
-
-                .duration.col-md-2
+                %td.duration.col-md-2
                   %i.fa.fa-clock-o
                   = job.duration
