--- a/app/assets/stylesheets/rocket_job_mission_control/callout.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/callout.scss
@@ -5,37 +5,37 @@
 }
 .callout-queued {
   border-left-color: darkgrey;
-  .lead {
+  a {
     color: darkgrey;
   }
 }
 .callout-running {
   border-left-color: #337ab7;
-  .lead {
+  a {
     color: #337ab7;
   }
 }
 .callout-completed {
   border-left-color: green;
-  .lead {
+  a {
     color: green;
   }
 }
 .callout-paused {
   border-left-color: orange;
-  .lead {
+  a {
     color: orange;
   }
 }
 .callout-failed {
   border-left-color: red;
-  .lead {
+  a {
     color: red;
   }
 }
 .callout-aborted {
   border-left-color: darkorange;
-  .lead {
+  a {
     color: darkorange;
   }
 }
@@ -43,9 +43,15 @@
 /* Used by Dirmon Entries */
 .callout-enabled {
   border-left-color: green;
+  a {
+    color: green;
+  }
 }
 .callout-disabled {
   border-left-color: orange;
+  a {
+    color: darkorange;
+  }
 }
 
 /* Used by Workers */
